2009-08-24  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Control.cs: Remove the ancient code in ResetText, which was setting
	the internal field to String.Empty, instead of doing it for our Text
	property, as .net does (which also causes a TextChanged event and all
	the other related routines).
	Fixes #531587.

2009-08-24  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TreeNodeCollection.cs: Correctly implement Contains by using a
	linear search - there's no possible way to use a binary search, since
	the node instances are not implementing IComparable, nor have a
	specific order.
	Fixes #529927.

2009-08-24  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGrid.cs: If we are *not* changing a row
	already added to the source, and thus we are adding a new 
	row instead, try to move to the previous row when Esc is
	pressed -if possible-.
	Fixes some bits of #322974.

2009-08-24  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGridTextBoxColumn.cs:
	* DataGrid.cs: Moving the cell to the add row (the last one) should
	not immediately add a new row - this should happen until the very
	first change happens in that textbox.
	Fixes part of #322974.

2009-08-19  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolStripDropDown.cs: When assigning the owner item, use its Font as
	well.

2009-08-17  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ToolStripItem.cs: When the owner changes its Font, call the
	OnFontChanged event, so we let our users know that we likely have a
	new font - since Font is an ambient property.
	* ToolStripDropDownItem.cs: When our Font changes, propagate that
	information to our DropDown control, if any.
	Fixes #531515.

2009-08-17  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGrid.cs: 
	* ThemeWin32Classic.cs: When the user clicks on a new cell, we should reset any
	previous selection, just like .net does. Also, in the cases where a